# Askello

./: .gitignore  README.md  pyproject.toml
notes/: Aadarsh.txt  Atharva.txt  Atharva_github.txt
src/agents/: router_agent.py
src/agents/prompts/: router_agent_prompt.txt
src/askello.egg-info/: PKG-INFO  SOURCES.txt
src/config/: faiss.py
src/data/: CRM & LMS task.csv  CRM & LMS task.xlsx
src/notebooks/: agentic.ipynb  agentic_flow.ipynb  elastic.ipynb  faiss_rag.ipynb  sql_rag.ipynb  thread_id.ipynb
src/notebooks/logs/: FaissRAG
src/services/: faiss.py
src/utils/: logger.py
